# avx-median

./: .gitmodules  CMakeLists.txt  LICENSE  avx-median.cpp  avx-median.h  parallel_avx2.cpp  parallel_avx512.cpp  parallel_step1.cpp  step0.cpp  step1.cpp  step2.cpp  step3.cpp
